/*
 * Backpack - Skyscanner's Design System
 *
 * Copyright 2016 Skyscanner Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/* @flow strict */

import { render } from '@testing-library/react';

import BpkButtonLink, { themeAttributes } from './BpkButtonLink';

describe('BpkButtonLink', () => {
  it('should render correctly', () => {
    const { asFragment } = render(
      <BpkButtonLink onClick={() => null}>Link</BpkButtonLink>,
    );
    expect(asFragment()).toMatchSnapshot();
  });

  it('should render correctly with a "className" atribute', () => {
    const { asFragment } = render(
      <BpkButtonLink onClick={() => null} className="test-class">
        Link
      </BpkButtonLink>,
    );
    expect(asFragment()).toMatchSnapshot();
  });

  it('should render correctly with "white" attribute', () => {
    const { asFragment } = render(
      <BpkButtonLink onClick={() => null} white>
        Link
      </BpkButtonLink>,
    );
    expect(asFragment()).toMatchSnapshot();
  });

  it('should render correctly with "alternate" attribute', () => {
    const { asFragment } = render(
      <BpkButtonLink onClick={() => null} alternate>
        Link
      </BpkButtonLink>,
    );
    expect(asFragment()).toMatchSnapshot();
  });

  it('should render correctly with arbitrary attributes', () => {
    const { asFragment } = render(
      <BpkButtonLink onClick={() => null} id="test-id">
        Link
      </BpkButtonLink>,
    );
    expect(asFragment()).toMatchSnapshot();
  });

  describe('themeAttributes', () => {
    it('exports the expected themeAttributes', () => {
      expect(themeAttributes).toEqual([
        'linkColor',
        'linkHoverColor',
        'linkActiveColor',
        'linkVisitedColor',
      ]);
    });
  });
});
