// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkButtonLink should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-link"
    type="button"
  >
    Link
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLink should render correctly with "alternate" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-link bpk-link--alternate"
    type="button"
  >
    Link
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLink should render correctly with a "className" atribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-link test-class"
    type="button"
  >
    Link
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLink should render correctly with arbitrary attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-link"
    id="test-id"
    type="button"
  >
    Link
  </button>
</DocumentFragment>
`;
